tests/ui/rfcs/rfc-0000-never_patterns/unreachable.stderr
error: unreachable pattern
  --> $DIR/unreachable.rs:14:9
   |
LL |         Err(!),
   |         ^^^^^^
   |
note: the lint level is defined here
  --> $DIR/unreachable.rs:4:9
   |
LL | #![deny(unreachable_patterns)]
   |         ^^^^^^^^^^^^^^^^^^^^

error: unreachable pattern
  --> $DIR/unreachable.rs:17:19
   |
LL |     let (Ok(_x) | Err(!)) = res_void;
   |                   ^^^^^^

error: unreachable pattern
  --> $DIR/unreachable.rs:19:12
   |
LL |     if let Err(!) = res_void {}
   |            ^^^^^^

error: unreachable pattern
  --> $DIR/unreachable.rs:21:24
   |
LL |     if let (Ok(true) | Err(!)) = res_void {}
   |                        ^^^^^^

error: unreachable pattern
  --> $DIR/unreachable.rs:23:23
   |
LL |     for (Ok(mut _x) | Err(!)) in [res_void] {}
   |                       ^^^^^^

error: unreachable pattern
  --> $DIR/unreachable.rs:27:18
   |
LL | fn foo((Ok(_x) | Err(!)): Result<bool, Void>) {}
   |                  ^^^^^^

error: aborting due to 6 previous errors

